--- a/CS/BlazorAuth.csproj
+++ b/CS/BlazorAuth.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>aspnet-BlazorAuth-9F8F37E8-C7E8-4D29-BFE6-47204A65FA44</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="DevExpress.AspNetCore.Dashboard" Version="21.1.6" />
-    <PackageReference Include="DevExpress.Blazor.Dashboard" Version="21.1.6" />
+    <PackageReference Include="DevExpress.AspNetCore.Dashboard" Version="21.2.2-pre-21250" />
+    <PackageReference Include="DevExpress.Blazor.Dashboard" Version="21.2.2-pre-21250" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="5.0.5" />
