--- a/CS/BlazorAuth/BlazorAuth.csproj
+++ b/CS/BlazorAuth/BlazorAuth.csproj
@@ -9,8 +9,8 @@
 
 
 	<ItemGroup>
-		<PackageReference Include="DevExpress.AspNetCore.Dashboard" Version="22.2.*" />
-		<PackageReference Include="DevExpress.Blazor.Dashboard" Version="22.2.*" />
+		<PackageReference Include="DevExpress.AspNetCore.Dashboard" Version="22.2.2" />
+		<PackageReference Include="DevExpress.Blazor.Dashboard" Version="22.2.2" />
 		<PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.6" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.6" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.6" />
@@ -22,3 +22,4 @@
 	</ItemGroup>
 
 </Project>
+
